<resources>
    <string name="app_name">Marvel Battle Simulator App</string>
    <string name="aboutButton">About</string>
    <string name="about_text">Deze App is gemaakt voor het vak Mobile Development in kader van onze opleiding Toegepaste Informatica aan de hogeschool PXL onder leidng van Steven Palmaers, Phillipe Haldermans en Niek Vandael. In deze app zijn concepten zoals API calls, database, recyclerviews, master details… uitgewerkt.\n\n \n Niels Vervloesem en Siebe Corstjens</string>
    <string name="characterSelectorButton">Play</string>
    <string name="names">name</string>
    <string name="marvel_api_url">https://gateway.marvel.com/v1/public/characters?apikey=1d81280bb5040d5376599647cde6da9e&amp;hash=804f451c2440d22822d02dabc8e88c9c&amp;ts=1</string>
    <string name="about">ABOUT</string>
    <string name="save_changes">Save changes</string>
    <string name="mute">MUTE</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="i_m_a_baby">I\'m a baby!</string>
    <string name="bring_it_on">Bring it on!</string>
    <string name="i_want_my_mommy">I want my mommy</string>
    <string name="settings">SETTINGS</string>
    <string name="highscore">Highscore</string>
    <string name="battle_background">Battle Background</string>

    <string name="avengers_title">The Avengers</string>
    <string name="avengers_description">The Avengers, also known as the Heroes of New York, are a team of extraordinary individuals, either with superpowers or other special characteristics. Its purpose is to protect world stability from inner or extraterrestrial threats, and to work with the peaceful interests of the whole world rather than a specific country or organization</string>
    <string name="captain_america_shield_title">Captain America</string>
    <string name="captain_america_shield_description">Rogers indestructible shield has often been referred to as being an Adamantium-Vibranium alloy. This is a result of an erroneous entry in the Official Handbook of the Marvel Universe entry on Captain America, which propagated into future stories</string>
    <string name="iron_man_suit_title">Iron man</string>
    <string name="iron_man_suit_description">The Mark 42 (XLII), known by its code name "Extremis" or the “Prodigal Son” is an Autonomous Prehensile Propulsion Suit Prototype was the forty second armor, as well as one of the many newly built suits, created by Tony Stark sometime after the events of The Avengers.</string>
    <string name="shield_title">S.H.I.E.L.D.</string>
    <string name="shield_description">The Strategic Homeland Intervention, Enforcement and Logistics Division, better known by its acronym S.H.I.E.L.D., is an American extra-governmental military counter-terrorism and intelligence agency, tasked with maintaining both national and global security.</string>
    <string name="maxHealth">/100 Health</string>
    <string name="clicks">Clicks:</string>
    <string name="damage">Damage</string>
    <string name="NewHighscore">New Highscore, enter your name!</string>
    <string name="Ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="back">back</string>
    <string name="mute_music">Mute music</string>
    <string name="change_background">Change Background</string>
    <string name="highscores">HIGHSCORES</string>
    <string name="choose_a_theme">CHOOSE A THEME</string>
    <string name="fight">FIGHT!</string>
    <string name="time_1">Time 1</string>
    <string name="hit">HIT!</string>
    <string name="quit">Quit</string>
    <string name="fight_again">Fight Again</string>
    <string name="marvel_battle_simulator">Marvel Battle Simulator</string>
    <string name="select_character">SELECT CHARACTER</string>
    <string name="fight_2">Fight</string>
    <string name="set_background">Set Background</string>
    <string name="loading">Loading...</string>
</resources>
