<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marvelGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/settingsHeading"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#9f0013"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mute_music"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"/>

                <CheckBox
                    android:id="@+id/muteCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mute" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:text="@string/difficulty_level" />

                <RadioGroup
                    android:id="@+id/radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/i_m_a_baby" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bring_it_on" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/i_want_my_mommy" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:text="@string/battle_background" />

                <Button
                    android:id="@+id/backgroundButton"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:onClick="openBackGroundSelector"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:background="@color/marvelRed"
                    android:text="@string/change_background"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:orientation="horizontal">

                <Button
                    android:id="@id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:background="#9f0013"
                    android:onClick="openMainPage"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/saveChanges"
                    android:layout_width="170dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:background="#9f0013"
                    android:onClick="saveChanges"
                    android:text="@string/save_changes"
                    android:textColor="@color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
