<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marvelGrey"
    tools:context=".Pages.DisplayAboutPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/aboutHeading"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#9f0013"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutText"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="#9f0013"
                android:onClick="openMainPage"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="20sp"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>