<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pages.MainActivity"
    android:background="@drawable/avengers_1_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="100">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal"
            tools:ignore="Suspicious0dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="50dp"
                android:textStyle="bold"
                android:text="Marvel Battle Simulator"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textFontWeight="bold"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                 />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal"
            tools:ignore="Suspicious0dp">

            <Button
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="openCharacterSelectorPage"
                android:width="140dp"
                android:layout_margin="10dp"
                android:background="#9f0013"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/characterSelectorButton" />

            <Button
                android:id="@+id/aboutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/playButton"
                android:layout_margin="10dp"
                android:width="140dp"
                android:onClick="openAboutPage"
                android:background="#9f0013"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/aboutButton" />

            <Button
                android:id="@+id/highscoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/aboutButton"
                android:layout_margin="10dp"
                android:width="140dp"
                android:onClick="openHighscore"
                android:background="#9f0013"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/highscore" />

            <Button
                android:id="@+id/settingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/highscoreButton"
                android:layout_centerHorizontal="true"
                android:width="140dp"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="openInstellingenPage"
                android:background="#9f0013"
                android:text="@string/settings" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>